<resources>
    <string name="app_name">৪০ রাব্বানা দোয়া</string>
    <string name="rabbana1">রাব্বানা ওয়ায-আলনা মুসলিমেনি লাকা</string>
    <string name="aiyat128">সূরা আল বাক্বারাহ,আয়াত 128</string>
    <string name="arabic_sura1">رَبَّنَا وَاجۡعَلۡنَا مُسۡلِمَيۡنِ لَـكَ وَ مِنۡ ذُرِّيَّتِنَآ اُمَّةً مُّسۡلِمَةً لَّكَ وَاَرِنَا مَنَاسِكَنَا وَتُبۡ عَلَيۡنَا ۚ اِنَّكَ اَنۡتَ التَّوَّابُ الرَّحِيۡم</string>
    <string name="arabic_pro1">রব্বানা- অজ্ব্ ্‘আল্না- মুস্লিমাইনি লাকা অমিন্ র্যুরিয়্যাতিনা- উম্মাতাম্ মুস্লিমাতাল্লাকাঅআরিনা-মানা-সিকানা-অতুব্ ‘আলাইনা-ইন্নাকা আন্তাত্ তাওয়্যা-র্বু রাহীম্।</string>
    <string name="arabic_answer1">পরওয়ারদেগার! আমাদের উভয়কে তোমার আজ্ঞাবহ কর এবং আমাদের বংশধর থেকেও একটি অনুগত দল সৃষ্টি কর, আমাদের হজ্বের রীতিনীতি বলে দাও এবং আমাদের ক্ষমা কর। নিশ্চয় তুমি তওবা কবুলকারী। দয়ালু।</string>
    <string name="fojilot1">১। এই দোয়াটি হযরত ইবরাহীম (আঃ) নিয়মিত করতেন।\n\n২। হযরত ইবরাহীম (আঃ) কোন কাজ শেষ করার পর আল্লাহ্র প্রতি ভয় এবং স্বীকৃতি সরূপ এই দোয়াটি করতেন। আল্লাহ্র উপর বশ্যতা এবং আনুগত্যের প্রকাশ হিসেবে সবারই এই দোয়াটি করা উচিৎ। \n  এর কারণ হিসেবে বলা হয়েছে, কোন ব্যক্তির মধ্যে আল্লাহ্র উপর স্বীকৃতি যত বাড়বে, আল্লাহকে অনুধাবনের পরিমানও বাড়তে থাকবে।" \n\n৩। ইবরাহীম (আঃ) তাঁর বংশধরদের আধ্যাত্মিক কল্যাণ এর জন্যেও এই দোয়া করতেন বিশেষ করে তাদের আখিরাতের কল্যানের জন্যে।
    \n\n৪। এই দোয়াটি করার অন্য আরেকটি কারণও আছে। তাঁর বংশধরগন ভাল কাজ করে যাতে ভবিষ্যৎ প্রজন্মের জন্যে উদাহরন হিসেবে রাখতে পারে এবং তা পরবর্তীতে সমগ্র মুসলমান জাতির জন্যে কল্যান বয়ে আনবে।</string>
    <string name="rabbana11">রাব্বানা আমান্না বিমা আনযালতা</string>
    <string name="aiyat53">সূরা আল-ইমরান, আয়াতঃ ৫৩</string>
    <string name="arabic_sura11">رَبَّنَا آمَنَّا بِمَا أَنزَلَتْ وَاتَّبَعْنَا الرَّسُولَ فَاكْتُبْنَا مَعَ الشَّاهِدِينَِ</string>
    <string name="arabic_pro11">রাব্বানা আমান্না বিমা আনযালতা ওয়াত্তাবা নার-রুসুলা ফাক-তুবনা মা\'স-শাহিদীন।</string>
    <string name="arabic_answer11">হে রাব্বুল আলামিন! আমারা তোমার নাযিল করা বিষয়ের উপর বিশ্বাস স্থাপন করেছি, এবং তোমার রাসুলের দেখানো পথে চলার চেষ্টা করি! দয়া করে আমাদেরকে তোমার হুকুম পালনকারীদের সারিতে রাখুন।</string>
    <string name="fojilot11">১। হযরত ঈসা (আঃ) এর সহকারীগন এই দোয়া করেছিলেন। যখন ঈসা (আঃ) তাঁর জাতির কাছে জানতে চেয়েছিলেন, কার তাঁর সহযোগী হতে চান। তখন তাঁরা রাজি হয়েছিলেন এবং এই দোয়াটি পড়ার মধ্যমে তাদের যুক্তি জোরালো করেছিলেন। (মারিফুল কুরআন)</string>
    <string name="rabbana12">রাব্বানাঘফির লানা যুনুবানা ওয়া</string>
    <string name="aiyat147">সূরা আল-ইমরান, আয়াতঃ ১৪৭</string>
    <string name="arabic_sura12">ربَّنَا اغْفِرْ لَنَا ذُنُوبَنَا وَإِسْرَافَنَا فِي أَمْرِنَا وَثَبِّتْ أَقْدَامَنَا وانصُرْنَا عَلَى الْقَوْمِ الْكَافِرِينََِِ</string>
    <string name="arabic_pro12">রাব্বানাঘফির লানা যুনুবানা ওয়া ইসরাফানা ফি আমরিনা ওয়া থাব্বিত আকদামানা ওয়ানসুরনা আলাল কাওমিল কাফীরীন</string>
    <string name="arabic_answer12">হে রাব্বুল আলামিন! আমাদের গুনাহ এবং ভুল গুলো ক্ষমা করে দাও। এবং আমাদেরকে দৃঢ় থাকতে এবং কাফের সম্প্রদায়ের বিরুদ্ধে জয়ী হতে সাহায্য কর।</string>
    <string name="fojilot12">১। এই আয়াতের মূল শিক্ষা হচ্ছে যখন কেউ কোন দুর্যোগে বিপদগ্রস্থ হয় সবারই একসাথে এগিয়ে আসা উচিত এবং অনুশোচনা করে দোয়া করা উচিৎ। কারণ অধিকাংশ দুর্যোগ/ সমস্যা কাউকে বিপদে ফেলছে তাঁর অতিত পাপের কারনে। (বায়ানুল কুরআন)\n\n২। এই দোয়ার মাধ্যমে প্রথমে অতীতের সকল পাপের জন্যে ক্ষমা চাওয়া হয়। এর একটি দিক হচ্ছে, যে কোন ধরনের বিপদ-আপদ, দুর্যোগ, সমস্যা যাই আসুক না কেন, এটি যে বিপদগ্রস্থ ব্যাক্তির অতিত পাপের কারনে হয়ছে তা স্বীকার করে নেয়া। এবং প্রতিকার হিসেবে পাপের জন্যে আল্লাহ্‌র কাছে ক্ষমা চাওয়া এবং অনুশোচনা করা।(মারিফুল কুরআন)</string>
    <string name="rabbana13">রাব্বানা মা খালাকতা হাযা বাতিলা</string>
    <string name="aiyat191">সূরা আল-ইমরান, আয়াতঃ ১৯১</string>
    <string name="arabic_sura13">رَبَّنَا مَا خَلَقْتَ هَذا بَاطِلاً سُبْحَانَكَ فَقِنَا عَذَابَ النَّارََِِِ</string>
    <string name="arabic_pro13">রাব্বানা মা খালাকতা হাযা বাতিলা সুবহানাকা ফাকিনা আযাবান-নার</string>
    <string name="arabic_answer13">হে আল্লাহ! আপনি এই দুনিয়ার কোন কিছুই উদ্দেশ্য ছাড়া আপন মহিমায় তৈরি করেন নি! আমাদিগকে দোযখের আযাব থেকে পরিত্রাণ দিন।</string>
    <string name="fojilot13">১। এই দোয়ার অর্থ হচ্ছে, মানুষের অনেক চাওয়া/ উদ্দেশ্য থাকতে পারে। কিন্তু শেষ চাওয়ার মধ্যে দুটি জিনিস থাকা উচিৎ - ১) জান্নাত পাওয়া ২) জাহান্নামের আগুন থেকে দূরে থাকা। কিন্তু এ জন্যে দুটি শর্ত আরোপ করা হয়েছে - ১) ঈমান আনা ২) পাপ কর্ম থেকে দূরে থাকা।(বায়ানুল কুরআন)\n\n২। হযরত আবু হুরায়রা (রাঃ) হতে বর্ণিত - রাসুলুল্লাহ (সাঃ) নিয়মিত রাতে এই দুয়া পাঠ করতেন।</string>
    <string name="rabbana14">রাব্বানা ইন্নাকা মান তুদখিলিন নারা</string>
    <string name="aiyat192">সূরা আল-ইমরান, আয়াতঃ ১৯২</string>
    <string name="arabic_sura14">رَبَّنَا إِنَّكَ مَن تُدْخِلِ النَّارَ فَقَدْ أَخْزَيْتَهُ وَمَا لِلظَّالِمِينَ مِنْ أَنصَارٍ</string>
    <string name="arabic_pro14">রাব্বানা ইন্নাকা মান তুদখিলিন নারা ফাকাদ আখযাইতাহ ওয়া মা লিয-যালিমীনা ওয়া মা লিয-যালিমীনা মিন আনসার</string>
    <string name="arabic_answer14">হে আল্লাহ! নিশ্চয়ই আপনি তাকেই জাহান্নামে প্রেরন করবেন, যার উপর আপনি নাখোশ হবেন। এবং জালিম ও সত্যের পথ ভ্রষ্টরা আপনার করুনা পাবেনা।</string>
    <string name="fojilot14">১। এই দোয়ার অর্থ হচ্ছে, মানুষের অনেক চাওয়া/ উদ্দেশ্য থাকতে পারে। কিন্তু শেষ চাওয়ার মধ্যে দুটি জিনিস থাকা উচিৎ - ১) জান্নাত পাওয়া ২) জাহান্নামের আগুন থেকে দূরে থাকা। কিন্তু এ জন্যে দুটি শর্ত আরোপ করা হয়েছে - ১) ঈমান আনা ২) পাপ কর্ম থেকে দূরে থাকা।(বায়ানুল কুরআন)\n\n২। হযরত আবু হুরায়রা (রাঃ) হতে বর্ণিত - রাসুলুল্লাহ (সাঃ) নিয়মিত রাতে সুরাহ আল-ইমরান এর শেষ ১০ আয়াত পাঠ করতেন।</string>
    <string name="rabbana15">রাব্বানা ইন্নানা সামি\'না মুনাদিয়ান</string>
    <string name="aiyat193">সূরা আল-ইমরান, আয়াতঃ ১৯৩</string>
    <string name="arabic_sura15">رَّبَّنَا إِنَّنَا سَمِعْنَا مُنَادِيًا يُنَادِي لِلإِيمَانِ أَنْ آمِنُواْ بِرَبِّكُمْ فَآمَنَّا</string>
    <string name="arabic_pro15">রাব্বানা ইন্নানা সামি\'না মুনাদিয়ান-ইউনাদি লিল-ইমানি আন আমিনু বি রাব্বিকুম ফা\'আমান্না</string>
    <string name="arabic_answer15">হে রাব্বুল আলামিন! সত্যিই আমরা "আল্লাহ্‌র উপর বিশ্বাস" এর ডাকে সাড়া দিয়েছি এবং ঈমান এনেছি।</string>
    <string name="fojilot15">১। এই দোয়ার অর্থ হচ্ছে, মানুষের অনেক চাওয়া/ উদ্দেশ্য থাকতে পারে। কিন্তু শেষ চাওয়ার মধ্যে দুটি জিনিস থাকা উচিৎ - ১) জান্নাত পাওয়া ২) জাহান্নামের আগুন থেকে দূরে থাকা। কিন্তু এ জন্যে দুটি শর্ত আরোপ করা হয়েছে - ১) ঈমান আনা ২) পাপ কর্ম থেকে দূরে থাকা।(বায়ানুল কুরআন)\n\nহযরত আবু হুরায়রা (রাঃ) হতে বর্ণিত - রাসুলুল্লাহ (সাঃ) নিয়মিত রাতে সুরাহ আল-ইমরান এর শেষ ১০ আয়াত পাঠ করতেন।</string>
    <string name="rabbana16">রাব্বানা ফাঘফির লানা যুনুবানা</string>
    <string name="aiyat1931">সূরা আল-ইমরান, আয়াতঃ ১৯৩</string>
    <string name="arabic_sura16">رَبَّنَا فَاغْفِرْ لَنَا ذُنُوبَنَا وَكَفِّرْ عَنَّا سَيِّئَاتِنَا وَتَوَفَّنَا مَعَ الأبْرَارِ</string>
    <string name="arabic_pro16">রাব্বানা ফাঘফির লানা যুনুবানা ওয়া কাফফির আননা ছাইয়াতিনা ওয়া তাওফফানা মা\'ল আবরার</string>
    <string name="arabic_answer16">হে আল্লাহ! আমাদের গুনাহ মাফ কর ও খারাপ কাজ থেকে নিজেদেরকে বিরত রাখার তৌফীক দাও! এবং আমাদের পবিত্রতার সাথে আল-আবরারগনের সাথেই মৃত্যু কবুল করুন- যারা আপনার অনুগত এবং আপনার আদেশ নিষেধ সঠিক ভাবে মেনে চলেছে।</string>
    <string name="fojilot16">১। এই দোয়ার অর্থ হচ্ছে, মানুষের অনেক চাওয়া/ উদ্দেশ্য থাকতে পারে। কিন্তু শেষ চাওয়ার মধ্যে দুটি জিনিস থাকা উচিৎ - ১) জান্নাত পাওয়া ২) জাহান্নামের আগুন থেকে দূরে থাকা। কিন্তু এ জন্যে দুটি শর্ত আরোপ করা হয়েছে - ১) ঈমান আনা ২) পাপ কর্ম থেকে দূরে থাকা।(বায়ানুল কুরআন)\n\n২। হযরত আবু হুরায়রা (রাঃ) হতে বর্ণিত - রাসুলুল্লাহ (সাঃ) নিয়মিত রাতে সুরাহ আল-ইমরান এর শেষ ১০ আয়াত পাঠ করতেন।</string>
    <string name="rabbana17">রাব্বানা ওয়া আতিনা মা ওয়া\'আততানা</string>
    <string name="aiyat1932">সূরা আল-ইমরান, আয়াতঃ ১৯3</string>
    <string name="arabic_sura17">رَبَّنَا وَآتِنَا مَا وَعَدتَّنَا عَلَى رُسُلِكَ وَلاَ تُخْزِنَا يَوْمَ الْقِيَامَةِ إِنَّكَ لاَ تُخْلِفُ الْمِيعَاد</string>
    <string name="arabic_pro17">রাব্বানা ওয়া আতিনা মা ওয়া\'আততানা আলা রুসুলিকা ওয়ালা তুখযিনা ইয়াওমাল-কিয়ামাহ ইন্নাকা লা তুখলিফুল মি-আদ</string>
    <string name="arabic_answer17">হে আল্লাহ্‌! আপনি রাসুলগনের মাধ্যমে আমাদের কাছে যে ওয়াদা করেছিলেন তা কবুল করুন। এবং কিয়ামতের দিন আমাদের লজ্জিত করো না। নিশ্চয়ই তুমি ভঙ্গ করোনা অঙ্গীকার!</string>
    <string name="fojilot17">১। এই দোয়ার অর্থ হচ্ছে, মানুষের অনেক চাওয়া/ উদ্দেশ্য থাকতে পারে। কিন্তু শেষ চাওয়ার মধ্যে দুটি জিনিস থাকা উচিৎ - ১) জান্নাত পাওয়া ২) জাহান্নামের আগুন থেকে দূরে থাকা। কিন্তু এ জন্যে দুটি শর্ত আরোপ করা হয়েছে - ১) ঈমান আনা ২) পাপ কর্ম থেকে দূরে থাকা।(বায়ানুল কুরআন)\n\n২। হযরত আবু হুরায়রা (রাঃ) হতে বর্ণিত - রাসুলুল্লাহ (সাঃ) নিয়মিত রাতে সুরাহ আল-ইমরান এর শেষ ১০ আয়াত পাঠ করতেন।</string>
    <string name="rabbana18">ররাব্বানা আমাননা ফাকতুবনা</string>
    <string name="aiyat83">সূরা আল-মাইদাহ, আয়াতঃ ৮৩</string>
    <string name="arabic_sura18">رَبَّنَا آمَنَّا فَاكْتُبْنَا مَعَ الشَّاهِدِينَ</string>
    <string name="arabic_pro18">রাব্বানা আমাননা ফাকতুবনা মা\'আশ-শাহিদীন</string>
    <string name="arabic_answer18">হে দয়াময়! আমরা ঈমান এনেছি, আমাদের মান্যকারীদের তালিকায় অন্তর্ভুক্ত করে নিন।</string>
    <string name="fojilot18">"আমাননা" শব্দটি দিয়ে আহলুল-কিতাব এর আগের ঈমান কে বুজায় না বরং বর্তমান ইমানকেই ইঙ্গিত করা হয়েছে এবং ইমানদারদের দলে অন্তর্ভুক্ত হতে বলা হয়েছে।\n\nরাব্বানা শব্দটি দিয়ে এটি পরিষ্কার করা হয়ছে যে তাঁরা মিথ্যা এবং সাধারন নয় বরং সত্যিকারের ঈমান আনছে।\n\n"আশ-সাহিদিন" (নবীর উম্মাত) বলতে তাদেরকে বুজানো হয়েছে যারা রাসুলের দাওয়াতের উপর সন্তুষ্ট হওয়ার বিষয়ে স্বাক্ষী দেয়।(তাফসীর মাযহারি)</string>
    <string name="rabbana19">রাব্বানা আনযিল আলাইনা মা\'ইদাতাম</string>
    <string name="aiyat114">সূরা আল-মাইদাহ, আয়াতঃ ১১৪</string>
    <string name="arabic_sura19">رَبَّنَا أَنزِلْ عَلَيْنَا مَآئِدَةً مِّنَ السَّمَاء تَكُونُ لَنَا عِيداً لِّأَوَّلِنَا وَآخِرِنَا وَآيَةً مِّنكَ وَارْزُقْنَا وَأَنتَ خَيْرُ الرَّازِقِينَ</string>
    <string name="arabic_pro19">রাব্বানা আনযিল আলাইনা মা\'ইদাতাম মিনাস-সামাই তুকনু লানা ইদাল লি-আওয়া-লিনা ওয়া আখিরনা ওয়া আয়াতাম-মিনকা ওয়ার-যুকনা ওয়া আন্তা খায়রুল-রাযিকীন</string>
    <string name="arabic_answer19">হে আমাদের পালনকর্তা! আমাদের জন্য জান্নাত থেকে আহারের ব্যবস্থা করুন, যা আমাদের এবং আমাদের পরবর্তী সবার জন্যই আনন্দের হবে। এবং এটি আপনার পক্ষ থেকে একটা নিদর্শন হয়ে থাকবে। আপনি আমাদের রোজগারের ব্যবস্থা করে দিন, আপনিই শ্রেষ্ঠ রুযী দাতা। </string>
    <string name="rabbana4">রাব্বানা আফরিঘ আলাইনা সাব-রান</string>
    <string name="aiyat250">সূরা আল-বাক্বারাহ, আয়াতঃ ২৫০</string>
    <string name="arabic_sura4">رَبَّنَا أَفْرِغْ عَلَيْنَا صَبْراً وَثَبِّتْ أَقْدَامَنَا وَانصُرْنَا عَلَى القَوْمِ الكَافِرِينَ</string>
    <string name="arabic_pro4">রাব্বানা আফরিঘ আলাইনা সাব-রান ওয়া থাব্বিত আকদামানা ওয়ানসুরনা আলাল-কাউমিল-কাফিরিন</string>
    <string name="arabic_answer4">হে আল্লাহ! আমাদের ধৈর্য শক্তি বাড়িয়ে দাও, এবং আমাদেরকে দৃঢ়পদ কর এবং কাফের সম্প্রদায়ের বিরুদ্ধে জয়ী করে তোল।</string>
    <string name="fojilot_full4">সাহাবীগণ  যুদ্ধে থাকা অবস্থায় জালুতের সাথে এই দোয়া পড়তেন। প্রতিপক্ষ সৈন্যদের আক্রমনের স্বীকার হলেও এই দোয়া পড়তেন।</string>
    <string name="rabbana24">রাব্বানা লা তায-আলনা ফিতনাতাল</string>
    <string name="aiyat85_86">সূরা ইউনুস, আয়াতঃ ৮৫-৮৬</string>
    <string name="arabic_sura24"> رَبَّنَا لاَ تَجْعَلْنَا فِتْنَةً لِّلْقَوْمِ الظَّالِمِينَ ; وَنَجِّنَا بِرَحْمَتِكَ مِنَ الْقَوْمِ الْكَافِرِينَ</string>
    <string name="arabic_pro24"> রাব্বানা লা তায-আলনা ফিতনাতাল লিল-কাওমিয- যালিমীন ওয়া নাযযিনা বি-রাহমাতিকা মিনাল কাওমিল কাফিরীন</string>
    <string name="arabic_answer24"> হে আল্লাহ্‌! আমাদেরকে জালিম এবং পথভ্রষ্ট কওমের শক্তি পরিক্ষা করিও না। এবং আমাদেরকে জালিম ও কাফেরদের হাত থেকে রক্ষা করো। </string>
    <string name="fojilot_full24">যে কোন দোয়া করার আগে তা কবুল হওয়ার জন্যে আল্লাহ্‌র উপর পূর্ণ ভরসা রাখা পরম গুরুত্বপূর্ণ। (তাফসীর মাযহারি) </string>
    <string name="pronunciation">উচ্চারণ</string>
    <string name="answer1">অর্থ</string>
    <string name="fojilot">ফজিলত</string>
</resources>